# hs2048

./: README.md  hs2048.cabal
ai/: Main.hs
app/: Main.hs
gui/: Main.hs
src/: Game.hs  Lib.hs  Math.hs  Rendering.hs
test/: Spec.hs
