name:                hs2048
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/anuraags/hs2048#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib Game Math Rendering
  build-depends:       base >= 4.7 && < 5
                     , random == 1.1
                     , ansi-terminal
                     , mtl == 2.2.1
  default-language:    Haskell2010

executable hs2048-gui
  hs-source-dirs:      gui
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , threepenny-gui
                     , hs2048
  default-language:    Haskell2010

executable hs2048-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hs2048
  default-language:    Haskell2010

test-suite hs2048-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec == 2.*
                     , random == 1.1
                     , hs2048
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/anuraags/hs2048
